# ai-market-agent-vaia

./: .env.example  .gitignore  README.md  evaluation_results.json  main.py  market_research_report.txt  pyproject.toml  run_all_tests.sh  run_api.py
app/: init_db.py  process_document.py  test_prompts.py  test_qa.py  test_retrieval.py
app/api/: main.py
app/database/: config.py  connection.py  repository.py
app/evaluation/: benchmark.py
app/prompts/: extraction_system.j2  extraction_user.j2  qa_system.j2  qa_user.j2  router.j2  summarization_system.j2  summarization_user.j2
app/services/: chunking.py  embedding.py  prompt_manager.py  retrieval.py  router.py
app/ui/: gradio_app.py
app/workflows/: extraction_workflow.py  qa_workflow.py  summarization_workflow.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  docker-setup.sh
docs/: EVALUATION.md
tests/: test_api.py  test_extraction.py  test_prompts.py  test_qa.py  test_retrieval.py  test_router.py  test_summarization.py
